<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow android:weightSum="3">

        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxCheckedTextView
            style="@style/CheckTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/one_rk" />

        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxCheckedTextView
            style="@style/CheckTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/one_bhk" />

        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxCheckedTextView
            style="@style/CheckTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/two_bhk" />

    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/margin_15"
        android:weightSum="3">

        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxCheckedTextView
            style="@style/CheckTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/three_bhk" />

        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxCheckedTextView
            style="@style/CheckTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/four_bhk" />

        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxCheckedTextView
            style="@style/CheckTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/four_plus_bhk" />

    </TableRow>

</TableLayout>