<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/common_header_height"
    android:background="@color/black_color"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent_color">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_header_left_right_margin"
        android:layout_marginRight="@dimen/common_header_left_right_margin"
        android:layout_marginTop="@dimen/common_header_top_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/logo_height_width"
            android:layout_height="@dimen/logo_height_width"
            android:src="@mipmap/app_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_10">

            <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textColor="@color/color_e8e8e8"
                android:textSize="@dimen/text_size_16"
                app:font_type="@string/open_sens_regular" />

            <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fastfox"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_22"
                app:font_type="@string/open_sens_semi_bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>