<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f0f0f0"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/common_login_header" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="-50dp"
                android:background="@color/white_color"
                android:elevation="0dp"
                android:paddingBottom="@dimen/padding_10"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/padding_20">

                    <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextInputLayout
                        android:id="@+id/nameInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:font_type="@string/open_sens_regular">

                        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxEditTextView
                            android:id="@+id/enterUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_line"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/enter_name"
                            android:imeOptions="actionDone"
                            android:paddingBottom="@dimen/padding_10"
                            android:paddingTop="@dimen/padding_10"
                            android:text="@string/user_name"
                            android:theme="@style/EditTextStyle"
                            app:font_type="@string/open_sens_regular" />

                    </com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextInputLayout>

                    <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextInputLayout
                        android:id="@+id/emailIdlInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_15"
                        app:font_type="@string/open_sens_regular">

                        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxEditTextView
                            android:id="@+id/enterUserEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_line"
                            android:hint="@string/enter_email"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:paddingBottom="@dimen/padding_10"
                            android:paddingTop="@dimen/padding_10"
                            android:theme="@style/EditTextStyle"
                            app:font_type="@string/open_sens_regular" />

                    </com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextInputLayout>

                    <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextInputLayout
                        android:id="@+id/moveDateInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_15"
                        app:font_type="@string/open_sens_regular">

                        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxEditTextView
                            android:id="@+id/moveDateETV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_line"
                            android:hint="@string/move_in_date"
                            android:imeOptions="actionDone"
                            android:paddingBottom="@dimen/padding_10"
                            android:paddingTop="@dimen/padding_15"
                            android:textSize="@dimen/text_size_16"
                            android:theme="@style/EditTextStyle"
                            app:font_type="@string/open_sens_regular" />

                    </com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/common_button_layout" />

</LinearLayout>