<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/unnamed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/transparent_color">-->

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolBar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

        <!--</android.support.design.widget.AppBarLayout>-->

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_80"
                android:orientation="vertical">

                <ImageView
                    style="@style/margin_20_style"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/margin_30"
                    android:src="@mipmap/app_logo" />

                <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextView
                    android:id="@+id/userName"
                    style="@style/margin_20_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_25"
                    app:font_type="@string/open_sens_bold" />

                <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextView
                    android:id="@+id/welcomeText"
                    style="@style/margin_20_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:textColor="@color/color_f0f0f0"
                    android:textSize="@dimen/text_size_20"
                    app:font_type="@string/open_sens_regular" />

                <ProgressBar
                    android:id="@+id/separateProgressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_30"
                    android:indeterminate="false"
                    android:max="10"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_limit"
                    android:visibility="gone" />

                <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxTextView
                    android:id="@+id/getExactlyTV"
                    style="@style/margin_20_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_30"
                    android:layout_marginRight="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_30"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_20"
                    app:font_type="@string/open_sens_regular" />

            </LinearLayout>
        </ScrollView>

        <!--<ProgressBar-->
        <!--style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height=".5dp"-->
        <!--android:indeterminate="false"-->
        <!--android:max="10"-->
        <!--android:progress="10"-->
        <!--android:progressDrawable="@drawable/progress_limit"-->
        <!--android:visibility="visible" />-->

        <com.example.okutech.fastfoxlogintextapp.CustomViews.FastFoxButton
            android:id="@+id/getStartedBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent_color"
            android:text="@string/lets_get_started"
            android:textAllCaps="false"
            android:textColor="@color/color_e21f2a"
            android:textSize="@dimen/text_size_22"
            app:font_type="@string/open_sens_bold" />
    </LinearLayout>
</FrameLayout>
